change position of about img to fix cropping issues

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -223,6 +223,9 @@
   display: block;
 }
 
+.section-card--about .section-card__image {
+  object-position: top;
+}
 .section-card__content {
   padding: 1.1rem 1.1rem 1.3rem;
 }
